--- a/View/LoginWindow.xaml
+++ b/View/LoginWindow.xaml
@@ -11,6 +11,7 @@
         Title="Login" Height="500" Width="500"
         Icon="icons8_book_96_EDe_icon.ico" Background="#00000000" Foreground="#00000000" BorderBrush="#00000000">
     <Window.Resources>
+
         <ResourceDictionary>
             <vm:LoginViewModel x:Key="vm"/>
             <vm:NotesViewModel x:Key="nvm"/>
@@ -31,16 +32,47 @@
                     <Trigger Property="IsEnabled" Value="false"/>
                 </ControlTemplate.Triggers>
             </ControlTemplate>
+            <Storyboard x:Key="FirstName"/>
+            <Storyboard x:Key="FirstNameTextBoxSelected">
+                <ColorAnimationUsingKeyFrames Storyboard.TargetName="path3" Storyboard.TargetProperty="(Shape.Stroke).(SolidColorBrush.Color)" >
+                    <EasingColorKeyFrame KeyTime="00:00:00.5000000" Value="#FFAB11CD">
+                        <EasingColorKeyFrame.EasingFunction>
+                            <CubicEase EasingMode="EaseInOut"/>
+                        </EasingColorKeyFrame.EasingFunction>
+                    </EasingColorKeyFrame>
+                </ColorAnimationUsingKeyFrames>
+                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="path3" Storyboard.TargetProperty="(Shape.StrokeThickness)">
+                    <EasingDoubleKeyFrame KeyTime="00:00:00.5000000" Value="1.3"/>
+                </DoubleAnimationUsingKeyFrames>
+            </Storyboard>
+            <Storyboard x:Key="FirstNameTextBoxLostFocus">
+                <ColorAnimationUsingKeyFrames Storyboard.TargetName="path3" Storyboard.TargetProperty="(Shape.Stroke).(SolidColorBrush.Color)" >
+                    <EasingColorKeyFrame KeyTime="00:00:00" Value="#FFAB11CD"/>
+                    <EasingColorKeyFrame KeyTime="00:00:00.5000000" Value="#FF0A5E99"/>
+                </ColorAnimationUsingKeyFrames>
+                <DoubleAnimationUsingKeyFrames Storyboard.TargetName="path3" Storyboard.TargetProperty="(Shape.StrokeThickness)">
+                    <EasingDoubleKeyFrame KeyTime="00:00:00" Value="1.3"/>
+                    <EasingDoubleKeyFrame KeyTime="00:00:00.5000000" Value="1"/>
+                </DoubleAnimationUsingKeyFrames>
+            </Storyboard>
+
+
+
 
         </ResourceDictionary>
     </Window.Resources>
     <Window.Triggers>
-
+        <EventTrigger RoutedEvent="FrameworkElement.GotFocus" SourceName="FirstNameTextBox">
+            <BeginStoryboard Storyboard="{StaticResource FirstNameTextBoxSelected}"/>
+        </EventTrigger>
+        <EventTrigger RoutedEvent="FrameworkElement.LostFocus" SourceName="FirstNameTextBox">
+            <BeginStoryboard Storyboard="{StaticResource FirstNameTextBoxLostFocus}"/>
+        </EventTrigger>
 
     </Window.Triggers>
-    <Grid x:Name="Grid" DataContext="{StaticResource vm}" Background="#00C13E3E" OpacityMask="#FFAE2727">
+    <Grid x:Name="Grid" DataContext="{StaticResource vm}" Background="#00C13E3E" OpacityMask="#FFAE2727" HorizontalAlignment="Center">
         <Grid x:Name="Register" 
-              Visibility="{Binding RegisterVisibility}">
+              Visibility="{Binding RegisterVisibility}" Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition/>
@@ -61,7 +93,8 @@
                     </TransformGroup>
                 </Rectangle.RenderTransform>
             </Rectangle>
-            <Rectangle HorizontalAlignment="Center" Height="425" VerticalAlignment="Center" Width="350" Fill="White" Grid.Column="1" RadiusX="20" RadiusY="20" RenderTransformOrigin="0.877,0.271"/>
+            <Rectangle HorizontalAlignment="Left" Height="425" VerticalAlignment="Center" Width="350" Fill="White" Grid.Column="1" RadiusX="20" RadiusY="20" RenderTransformOrigin="0.877,0.271" Margin="75,0,0,0"/>
+
 
 
             <TextBlock x:Name="textBlock1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="57" Margin="112,73,0,0" Text="Register" TextWrapping="Wrap" VerticalAlignment="Top" Width="140" Foreground="#FF046DB6" FontSize="36" TextAlignment="Justify" FontWeight="Bold" LineHeight="20"/>
@@ -69,13 +102,12 @@
             <TextBox x:Name="FirstNameTextBox"
                      Text="{Binding FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      KeyDown="FirstNameTextBox_KeyDown"
-                     Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="26" Margin="112,157,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="{x:Null}" BorderBrush="{x:Null}" SelectionBrush="{x:Null}" Foreground="#FF686666" TextAlignment="Justify" AutomationProperties.HelpText="dddd" GotFocus="PlacheholderTextBox_GotFocus" LostFocus="PlaceholderTextBox_LostFocus">
-
-            </TextBox>
+                     Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="26" Margin="112,157,0,0"  TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="{x:Null}" BorderBrush="{x:Null}" SelectionBrush="#FF0A5E99" Foreground="#FF686666" TextAlignment="Justify" AutomationProperties.HelpText="dddd" 
+                     Style="{StaticResource MyWaterMarkStyle}" Tag="First Name" Cursor="IBeam" SelectionTextBrush="#FF0A5E99" />
 
             <Button Command="{Binding RegisterCommand}"
                     CommandParameter="{Binding User}"
-                    HorizontalAlignment="Center" Height="41" Margin="0,306,0,0" VerticalAlignment="Top" Width="136" BorderBrush="{x:Null}" Background="{x:Null}" Grid.Column="1" Foreground="{x:Null}">
+                    HorizontalAlignment="Left" Height="41" Margin="182,305,0,0" VerticalAlignment="Top" Width="136" BorderBrush="{x:Null}" Background="{x:Null}" Grid.Column="1" Foreground="{x:Null}">
                 <Grid Height="32" Width="125">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="11*"/>
@@ -101,21 +133,25 @@
             <TextBox x:Name="LastNameTextBox"
                      Text="{Binding LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      KeyDown="LastNameTextBox_KeyDown"
+                     Style="{StaticResource MyWaterMarkStyle}" Tag="Last Name"
                      Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="26" Margin="258,157,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="{x:Null}" BorderBrush="{x:Null}" SelectionBrush="{x:Null}" Foreground="#FF686666" TextAlignment="Justify"/>
             <Path x:Name="path1" Grid.ColumnSpan="2" Data="M90,184.04 L393,184.04" HorizontalAlignment="Left" Height="17" Margin="112,221,0,0" Stretch="Fill" Stroke="sc#1, 0.00334653584, 0.102716692, 0.284873158" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.51,0.238"/>
             <TextBox x:Name="UsernameTextBoxR"
                      Text="{Binding Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      KeyDown="UsernameTextBoxR_KeyDown"
+                     Style="{StaticResource MyWaterMarkStyle}" Tag="Email"
                      Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="26" Margin="112,195,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="{x:Null}" BorderBrush="{x:Null}" SelectionBrush="{x:Null}" Foreground="#FF686666" TextAlignment="Justify" AutomationProperties.HelpText="vfdvv"/>
             <Path x:Name="path4" Grid.ColumnSpan="2" Data="M90,184.04 L393,184.04" HorizontalAlignment="Left" Height="3" Margin="258,222,0,0" Stretch="Fill" Stroke="sc#1, 0.00334653584, 0.102716692, 0.284873158" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.51,0.238"/>
             <TextBox x:Name="PasswordTextBoxR"
                      Text="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      KeyDown="PasswordTextBoxR_KeyDown"
+                     Style="{StaticResource MyWaterMarkStyle}" Tag="Password"
                      Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="26" Margin="258,196,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="{x:Null}" BorderBrush="{x:Null}" SelectionBrush="{x:Null}" Foreground="#FF686666" TextAlignment="Justify"/>
             <Path x:Name="path2" Grid.ColumnSpan="2" Data="M90,184.04 L393,184.04" HorizontalAlignment="Left" Height="17" Margin="112,258,0,0" Stretch="Fill" Stroke="sc#1, 0.00334653584, 0.102716692, 0.284873158" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.51,0.238"/>
             <TextBox x:Name="ConfirmPasswordTextBoxR"
                      Text="{Binding ConfirmPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      KeyDown="ConfirmPasswordTextBoxR_KeyDown"
+                     Style="{StaticResource MyWaterMarkStyle}" Tag="Confirm Passwords"
                      Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="26" Margin="112,232,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="{x:Null}" BorderBrush="{x:Null}" SelectionBrush="{x:Null}" Foreground="#FF686666" TextAlignment="Justify"/>
             <Button x:Name="QuitFormButton"
                     Command="{Binding ExitCommand, Source={StaticResource nvm}}"
@@ -152,13 +188,8 @@
             </Rectangle>
         </Grid>
         <Grid x:Name="Login"
-              Visibility="{Binding LoginVisibility}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="425*"/>
-                <ColumnDefinition Width="61*"/>
-                <ColumnDefinition Width="14*"/>
-            </Grid.ColumnDefinitions>
+              Visibility="{Binding LoginVisibility}" Grid.ColumnSpan="3" d:IsHidden="True">
+
             <VisualStateManager.VisualStateGroups>
                 <VisualStateGroup x:Name="VisualStateGroup">
                     <VisualStateGroup.Transitions>
@@ -177,8 +208,8 @@
             </Rectangle>
             <Rectangle HorizontalAlignment="Left" Height="425" VerticalAlignment="Center" Width="350" Fill="White" Grid.Column="1" RadiusX="20" RadiusY="20" RenderTransformOrigin="0.877,0.271" Margin="75,0,0,0"/>
 
-            <Rectangle x:Name="rectangle" Grid.ColumnSpan="3" HorizontalAlignment="Left" Height="74" Margin="381,54,0,0" VerticalAlignment="Top" Width="74" RadiusX="13" RadiusY="13" Fill="#FFAB11CD"/>
-            <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Height="74" Text="+" TextWrapping="Wrap" VerticalAlignment="Top" Width="74" FontSize="36" Grid.Column="1" Margin="381,63,0,0" Foreground="White" TextAlignment="Center" Grid.ColumnSpan="2" RenderTransformOrigin="0.5,0.5">
+            <Rectangle x:Name="rectangle" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="74" Margin="381,54,0,0" VerticalAlignment="Top" Width="74" RadiusX="13" RadiusY="13" Fill="#FFAB11CD"/>
+            <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Height="74" Text="+" TextWrapping="Wrap" VerticalAlignment="Top" Width="74" FontSize="36" Grid.Column="1" Margin="381,63,0,0" Foreground="White" TextAlignment="Center" RenderTransformOrigin="0.5,0.5">
                 <TextBlock.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
